--- a/index.html
+++ b/index.html
@@ -4,28 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Order summary card</title>
 
   <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
-  <h1><b>Olá Mundo</b></h1>
-  <h2>Oi de novo</h2>
   <div class="card">
-    Order Summary
+    <div class="img">
+      <img src="./src/assets/images/illustration-hero.svg" width="100%">
+    </div>
 
-    You can now listen to millions of songs, audiobooks, and podcasts on any 
-    device anywhere you like!
+    <div class="text1">
+      <h1>Order Summary</h1>
 
-    Annual Plan
-    $59.99/year
+      <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
+      device anywhere you like!</p>
+    </div>
 
-    Change
 
-    Proceed to Payment
-    Cancel Order
+    <div class="mid">
+
+      <img alt="Cara Dançando" height="50%" clas="icon" src="./src/assets/images/icon-music.svg">
+
+      <div class="coluna">
+        <p><b>Annual Plan</b><br>$59.99/year</p>
+      </div>
+
+      <a href="#">Change</a>
+    </div>
+
+    <div class="bottom">
+      <a class="btn1" href="#">Proceed to Payment</a><br>
+      <a class="btn2" href="#">Cancel Order</a> 
+    </div>
+
   </div>
 
 </body>
